<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textVelocidade"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_speed_background"
            android:gravity="center"
            android:hint="@string/valorInicial"
            android:textColor="#393635"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textTempoDeslocamento"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@+id/textVelocidade"
            android:layout_alignStart="@+id/textVelocidade"
            android:layout_marginStart="0dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/twotone_timer_24"
            android:gravity="center"
            android:hint="@string/tempo_hint"
            android:textColor="#393635"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textTempoChegada"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_below="@+id/textVelocidade"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/textTempoDeslocamento"
            android:background="@drawable/twotone_timer_24_green"
            android:gravity="center"
            android:hint="@string/tempo_hint"
            android:textColor="#393635"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textCombustivel"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignBottom="@+id/imageButtonSelecionaVeiculo"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/imageButtonSelecionaVeiculo"
            android:background="@drawable/baseline_water_drop_24"
            android:gravity="center"
            android:hint="@string/tanque_combustivel_hint"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/textVelocidadeRecomendada"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/textVelocidade"
            android:background="@drawable/ic_speed_recommend_background"
            android:gravity="center"
            android:hint="@string/valorInicial"
            android:textColor="#393635"
            android:textSize="13sp" />

        <ImageButton
            android:id="@+id/imageButtonSelecionaVeiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/seleciona_carro"
            android:background="@drawable/ic_speed_background"
            app:srcCompat="@drawable/baseline_directions_car_24" />

        <ImageButton
            android:id="@+id/imageButtonIniciaTrajeto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageButtonSelecionaVeiculo"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/inicializa_corrida"
            android:background="@drawable/ic_direction_start_background"
            app:srcCompat="@drawable/baseline_navigation_24" />

        <ImageButton
            android:id="@+id/imageButtonTerminaTrajeto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageButtonSelecionaVeiculo"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/ic_direction_end_background"
            android:contentDescription="@string/finaliza_corrida"
            app:srcCompat="@drawable/baseline_close_24" />

        <LinearLayout
            android:id="@+id/searchContainer"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageButtonSelecionaVeiculo"
            android:layout_alignStart="@+id/imageButtonSelecionaVeiculo"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/ic_search_background"
            android:orientation="horizontal">

            <fragment
                android:id="@+id/searchLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:contentDescription="@string/pesquisa_localizacao"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textCombustivel"
            android:layout_alignBottom="@+id/textCombustivel"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/ic_distance_background"
            android:layout_toStartOf="@+id/imageButtonIniciaTrajeto"
            android:layout_toEndOf="@+id/textCombustivel" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textDistanciaPercorrida"
                    android:layout_width="139dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_toEndOf="@+id/viewArrow"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:hint="@string/distancia_hint" />

                <TextView
                    android:id="@+id/viewArrow"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/baseline_arrow_upward_24" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</FrameLayout>